terraform/03-workloads/modules/routing/manifests/http-redirect-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ${app_name}-http-redirect-route
  namespace: traefik
spec:
  parentRefs:
  - name: ${app_name}-http-gateway
    namespace: traefik
    kind: Gateway
  hostnames:
  - ${domain}
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
