terraform/03-workloads/modules/routing/manifests/https-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ${app_name}-https-route
  namespace: traefik
spec:
  parentRefs:
  - name: ${app_name}-https-gateway
    namespace: traefik
    kind: Gateway
    sectionName: ${app_name}-https
  hostnames:
  - ${domain}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ${app_name}
      namespace: ${app_name}
      port: ${container_port}
      kind: Service
      weight: 100
